--- a/OmppuJaRane/src/main/resources/templates/addvaate.html
+++ b/OmppuJaRane/src/main/resources/templates/addvaate.html
@@ -3,6 +3,7 @@
 <head>
     <title>OmppuJaRane-addVaate</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" />
 </head>
 <body>
 	<h1>Lisää vaate</h1>
