listaus toimii nyt

--- a/OmppuJaRane/src/main/resources/templates/vaatelista.html
+++ b/OmppuJaRane/src/main/resources/templates/vaatelista.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Vaatelista</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -14,6 +14,8 @@
 		    <th>Tyyppi</th>
 		    <th>Hinta</th>
 		    <th>Valmistaja</th>
+		    <th>Poista</th>
+		    <th>Muokkaa</th>
 		    
 		</tr>
     	<tr th:each = "vaate : ${vaatteet}">
@@ -21,7 +23,7 @@
     		<td th:text="${vaate.name}"></td>
     		<td th:text="${vaate.type}"></td>
     		<td th:text="${#numbers.formatDecimal(vaate.price,1,2)}"></td>
-    		<td th:text="${vaate.valmistaja}"></td>
+    		<td th:text="${vaate.valmistaja.name}"></td>
     		<td><a class="btn btn-danger" th:href="@{/delete/{id}(id=${vaate.id})}">🔥</a></td>
     		<td><a class="btn btn-success" th:href="@{/edit/{id}(id=${vaate.id})}">✍</a></td>
     	</tr>
