dropdown valikko valmis

--- a/OmppuJaRane/src/main/resources/templates/addvaate.html
+++ b/OmppuJaRane/src/main/resources/templates/addvaate.html
@@ -10,15 +10,18 @@
 	<div>
 		<form th:object="${vaate}" th:action="@{save}" action="#" method="post">
 		  	<label for="name">Nimi</label>
-			<input type="text" id="name" th:field="*{name}" />
+			<input type="text" id="name" th:field="*{name}" class="form-control"/>
 			<div style="clear: both; display: block; height: 10px;"></div>
 		  	<label for="type">Type</label>
-			<input type="text" id="type" th:field="*{type}" />
+			<input type="text" id="type" th:field="*{type}" class="form-control"/>
 			<div style="clear: both; display: block; height: 10px;"></div>
 		  	<label for="price">hinta</label>
-			<input type="text" th:field="*{price}" />
+			<input type="text" th:field="*{price}" class="form-control"/>
 			<div style="clear: both; display: block; height: 10px;"></div>
-			<label for="valmistajalist">Valmistaja</label>
+			<label for="catlist">Valmistaja</label>
+				<select id="catlist" th:field="*{valmistaja}" class="form-control">
+					<option th:each="valmistaja: ${valmistaja}" th:value="${valmistaja.id}" th:text="${valmistaja.name}"></option>
+				</select>
 			 
 			<div style="clear: both; display: block; height: 10px;"></div>
 			
