--- a/OmppuJaRane/src/main/resources/templates/valmistajalista.html
+++ b/OmppuJaRane/src/main/resources/templates/valmistajalista.html
@@ -20,6 +20,6 @@
     		<td><a class="btn btn-success" th:href="@{/edit/{id}(id=${valmistaja.id})}">✍</a></td>
     	</tr>
      </table>
-     <a class="btn btn-success" href="/add">Lisää valmistaja</a>
+     <a class="btn btn-success" href="/addvalmistaja">Lisää valmistaja</a>
 </body>
 </html>
