--- a/OmppuJaRane/src/main/resources/templates/editvaate.html
+++ b/OmppuJaRane/src/main/resources/templates/editvaate.html
@@ -11,16 +11,18 @@
 			<label for="id"></label>
 			<input type="hidden" id="id" th:field="*{id}" readonly="readonly" />
 		  	<label for="name">Nimi</label>
-			<input type="text" id="title" th:field="*{name}" />
+			<input type="text" id="name" th:field="*{name}" />
 			<div style="clear: both; display: block; height: 10px;"></div>
 		  	<label for="type">Tyyppi</label>
-			<input type="text" id="author" th:field="*{type}" />
+			<input type="text" id="type" th:field="*{type}" />
 			<div style="clear: both; display: block; height: 10px;"></div>
 		  	<label for="price">Hinta</label>
-			<input type="text" id="year" th:field="*{price}" />
+			<input type="text" id="price" th:field="*{price}" />
 			<div style="clear: both; display: block; height: 10px;"></div>
-			<label for="valmistaja">Valmistaja</label>
-			<input type="text" id="isbn" th:field="*{valmistaja}" />
+			<label for="catlist">Valmistaja</label>
+				<select id="catlist" th:field="*{valmistaja}">
+					<option th:each="valmistaja: ${valmistajat}" th:value="${valmistaja.id}" th:text="${valmistaja.name}"></option>
+				</select>
 			<div style="clear: both; display: block; height: 10px;"></div>
 			<br>
 			<input type="submit" value="Save ✓"></input>
