added dog picture

--- a/OmppuJaRane/src/main/resources/templates/etusivu.html
+++ b/OmppuJaRane/src/main/resources/templates/etusivu.html
@@ -7,5 +7,6 @@
 <body>
 	<h1>Tervetuloa etusivulle</h1>
 	<p>Navigoi <a href="/vaatelista">tästä</a> vaatelistaukseen</p>
+	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSBqsKDLg9h_DHu-QotgUdVbnoLRilL4DO0kace_J_Kag&s" alt="doggo">
 </body>
 </html>
