--- a/OmppuJaRane/src/main/resources/templates/addvaate.html
+++ b/OmppuJaRane/src/main/resources/templates/addvaate.html
@@ -15,7 +15,7 @@
 		  	<label for="type">Type</label>
 			<input type="text" id="type" th:field="*{type}"/>
 			<div style="clear: both; display: block; height: 10px;"></div>
-		  	<label for="price">hinta</label>
+		  	<label for="price">Hinta</label>
 			<input type="text" th:field="*{price}"/>
 			<div style="clear: both; display: block; height: 10px;"></div>
 			<label for="catlist">Valmistaja</label>
