--- a/OmppuJaRane/src/main/resources/templates/editvaate.html
+++ b/OmppuJaRane/src/main/resources/templates/editvaate.html
@@ -3,6 +3,7 @@
 <head>
     <title>Vaatteen muokkaus</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+     <link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" />
 </head>
 <body>
 	<h1>Muokkaa vaatetta</h1>
@@ -25,7 +26,7 @@
 				</select>
 			<div style="clear: both; display: block; height: 10px;"></div>
 			<br>
-			<input type="submit" value="Save ✓"></input>
+			<input type="submit" class="btn btn-success"value="Save ✓"></input>
 		</form>
 	</div>
 </body>
