--- a/OmppuJaRane/src/main/resources/templates/vaatelista.html
+++ b/OmppuJaRane/src/main/resources/templates/vaatelista.html
@@ -29,5 +29,6 @@
     	</tr>
      </table>
      <a class="btn btn-success" href="/add">Lisää vaate</a>
+          <a class="btn btn-success" href="/valmistajalista">Valmistajalista</a>
 </body>
 </html>
