--- a/OmppuJaRane/src/main/resources/templates/valmistajalista.html
+++ b/OmppuJaRane/src/main/resources/templates/valmistajalista.html
@@ -21,5 +21,6 @@
     	</tr>
      </table>
      <a class="btn btn-success" href="/addvalmistaja">Lisää valmistaja</a>
+       <a class="btn btn-success" href="/vaatelista">Vaatelista</a>
 </body>
 </html>
