muokkaa ja poista teksti valmistaja html:ään. Etusivun muokkaus

--- a/OmppuJaRane/src/main/resources/templates/etusivu.html
+++ b/OmppuJaRane/src/main/resources/templates/etusivu.html
@@ -5,8 +5,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-	<h1>Tervetuloa etusivulle</h1>
-	<p>Navigoi <a href="/vaatelista">tästä</a> vaatelistaukseen</p>
+	<h1>Tervetuloa Ranen ja Ompun kauppaan 🐶</h1>
+	<p>Täältä löydät laadukkaimmat ja muodikkaimmat koiranvaatteet säähän kuin säähän.</p>
+	<p>Pääset <a href="/vaatelista">tästä</a> tutustumaan valikoimaamme!</p>
 	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSBqsKDLg9h_DHu-QotgUdVbnoLRilL4DO0kace_J_Kag&s" alt="doggo">
 </body>
 </html>
