--- a/OmppuJaRane/src/main/resources/templates/valmistajalista.html
+++ b/OmppuJaRane/src/main/resources/templates/valmistajalista.html
@@ -11,6 +11,9 @@
 		<tr>
 		    <th>ID</th>
 		    <th>Nimi</th>
+		    <th>Poista</th>
+		    <th>Muokkaa</th>
+		    
 		    
 		</tr>
     	<tr th:each = "valmistaja : ${valmistaja}">
