--- a/OmppuJaRane/src/main/resources/templates/frontpage.html
+++ b/OmppuJaRane/src/main/resources/templates/frontpage.html
@@ -7,7 +7,7 @@
 <body>
 	<h1>Tervetuloa Ranen ja Ompun kauppaan 🐶</h1>
 	<p>Täältä löydät laadukkaimmat ja muodikkaimmat koiranvaatteet säähän kuin säähän.</p>
-	<p>Pääset <a href="/vaatelista">tästä</a> tutustumaan valikoimaamme!</p>
+	<p>Pääset <a href="/apparel_list">tästä</a> tutustumaan valikoimaamme!</p>
 	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSBqsKDLg9h_DHu-QotgUdVbnoLRilL4DO0kace_J_Kag&s" alt="doggo">
 </body>
 </html>
