--- a/OmppuJaRane/src/main/resources/templates/makerlist.html
+++ b/OmppuJaRane/src/main/resources/templates/makerlist.html
@@ -16,14 +16,14 @@
 		    
 		    
 		</tr>
-    	<tr th:each = "valmistaja : ${valmistaja}">
-    		<td th:text="${valmistaja.id}"></td>
-    		<td th:text="${valmistaja.name}"></td>
-    		<td><a class="btn btn-danger" th:href="@{/deletevalmistaja/{id}(id=${valmistaja.id})}">🔥</a></td>
-    		<td><a class="btn btn-success" th:href="@{/editvalmistaja/{id}(id=${valmistaja.id})}">✍</a></td>
+    	<tr th:each = "maker : ${makers}">
+    		<td th:text="${maker.id}"></td>
+    		<td th:text="${maker.name}"></td>
+    		<td><a class="btn btn-danger" th:href="@{/delete_maker/{id}(id=${maker.id})}">🔥</a></td>
+    		<td><a class="btn btn-success" th:href="@{/edit_maker/{id}(id=${maker.id})}">✍</a></td>
     	</tr>
      </table>
-     <a class="btn btn-success" href="/addvalmistaja">Lisää valmistaja</a>
-       <a class="btn btn-success" href="/vaatelista">Vaatelista</a>
+     <a class="btn btn-success" href="/add_maker">Lisää valmistaja</a>
+       <a class="btn btn-success" href="/apparel_list">Vaatelista</a>
 </body>
 </html>
