--- a/OmppuJaRane/src/main/resources/templates/editmaker.html
+++ b/OmppuJaRane/src/main/resources/templates/editmaker.html
@@ -13,6 +13,7 @@
 			<input type="hidden" id="id" th:field="*{id}" readonly="readonly" />
 		  	<label for="name">Nimi</label>
 			<input type="text" id="name" th:field="*{name}" />
+			<div class="alert alert-warning" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
 			<br>
 			<input type="submit" class="btn btn-success"value="Save ✓"></input>
 		</form>
