thymeleaf template updates

--- a/OmppuJaRane/src/main/resources/templates/apparelmaker.html
+++ b/OmppuJaRane/src/main/resources/templates/apparelmaker.html
@@ -14,8 +14,6 @@
 		    <th>Tyyppi</th>
 		    <th>Hinta</th>
 		    <th>Valmistaja</th>
-		    <th>Poista</th>
-		    <th>Muokkaa</th>
 		    
 		</tr>
     	<tr th:each = "apparel : ${apparels}">
@@ -23,11 +21,8 @@
     		<td th:text="${apparel.name}"></td>
     		<td th:text="${apparel.type}"></td>
     		<td th:text="${#numbers.formatDecimal(apparel.price,1,2)}"></td>
-    		<td><a class="btn btn-danger" th:href="@{/delete_apparel/{id}(id=${apparel.id})}">🔥</a></td>
-    		<td><a class="btn btn-success" th:href="@{/edit_apparel/{id}(id=${apparel.id})}">✍</a></td>
     	</tr>
      </table>
-     <a class="btn btn-success" href="/add_apparel">Lisää vaate</a>
-          <a class="btn btn-success" href="/maker_list">Valmistajalista</a>
+     <a class="btn btn-success" href="/maker_list">Palaa takaisin</a>
 </body>
 </html>
