--- a/OmppuJaRane/src/main/resources/templates/makerlist.html
+++ b/OmppuJaRane/src/main/resources/templates/makerlist.html
@@ -23,7 +23,7 @@
     		
     		<td><a class="btn btn-danger" th:href="@{/delete_maker/{id}(id=${maker.id})}">🔥</a></td>
     		<td><a class="btn btn-success" th:href="@{/edit_maker/{id}(id=${maker.id})}">✍</a></td>
-    		<td><a class="btn btn-success" th:href="@{/apparelmaker/{maker} (maker=${maker})}">Merkin vaatteet</a></td>
+    		<td><a class="btn btn-success" th:href="@{/apparelmaker/{id} (id=${maker.id})}">Merkin vaatteet</a></td>
     		
     	</tr>
      </table>
