--- a/OmppuJaRane/src/main/resources/templates/makerlist.html
+++ b/OmppuJaRane/src/main/resources/templates/makerlist.html
@@ -20,13 +20,14 @@
     	<tr th:each = "maker : ${makers}">
     		<td th:text="${maker.id}"></td>
     		<td th:text="${maker.name}"></td>
-    		
     		<td><a class="btn btn-danger" th:href="@{/delete_maker/{id}(id=${maker.id})}">🔥</a></td>
     		<td><a class="btn btn-success" th:href="@{/edit_maker/{id}(id=${maker.id})}">✍</a></td>
-    		<td><a class="btn btn-success" th:href="@{/apparelmaker/{maker} (maker=${maker})}">Merkin vaatteet</a></td>
-    		
+    		<td><a class="btn btn-success" th:href="@{/apparelmaker/{id} (id=${maker.id})}">Merkin vaatteet</a></td>
+
+
     	</tr>
      </table>
+     
      <a class="btn btn-success" href="/add_maker">Lisää valmistaja</a>
        <a class="btn btn-success" href="/apparel_list">Vaatelista</a>
 </body>
