css added to frontpage

--- a/OmppuJaRane/src/main/resources/templates/frontpage.html
+++ b/OmppuJaRane/src/main/resources/templates/frontpage.html
@@ -3,6 +3,7 @@
 <head>
 <title>OmppuJaRane</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" />
 </head>
 <body>
 	<h1>Tervetuloa Ranen ja Ompun kauppaan 🐶</h1>
