varmistus makerin poistosta

--- a/OmppuJaRane/src/main/resources/templates/makerlist.html
+++ b/OmppuJaRane/src/main/resources/templates/makerlist.html
@@ -1,33 +1,81 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
-    <title>Valmistajalista</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" />    
+<title>Valmistajalista</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+	crossorigin="anonymous">
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+<script
+	src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+	integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+	crossorigin="anonymous"></script>
+
 </head>
 <body>
 
 	<table class="table table-striped">
 		<tr>
-		    <th>ID</th>
-		    <th>Nimi</th>
-		    <th>Poista</th>
-		    <th>Muokkaa</th>
-		    <th>Merkin vaatteet</th>
-		    
-		    
-		</tr>
-    	<tr th:each = "maker : ${makers}">
-    		<td th:text="${maker.id}"></td>
-    		<td th:text="${maker.name}"></td>
-    		<td><a class="btn btn-danger" th:href="@{/delete_maker/{id}(id=${maker.id})}">🔥</a></td>
-    		<td><a class="btn btn-success" th:href="@{/edit_maker/{id}(id=${maker.id})}">✍</a></td>
-    		<td><a class="btn btn-success" th:href="@{/apparelmaker/{id} (id=${maker.id})}">Merkin vaatteet</a></td>
+			<th>ID</th>
+			<th>Nimi</th>
+			<th>Poista</th>
+			<th>Muokkaa</th>
+			<th>Merkin vaatteet</th>
 
-    	</tr>
-     </table>
-     
-     <a class="btn btn-success" href="/add_maker">Lisää valmistaja</a>
-       <a class="btn btn-success" href="/apparel_list">Vaatelista</a>
+
+		</tr>
+		<tr th:each="maker : ${makers}">
+			<td th:text="${maker.id}"></td>
+			<td th:text="${maker.name}"></td>
+			<td><a class="btn btn-danger" id="deleteButton"
+				th:href="@{/delete_maker/{id}(id=${maker.id})}"
+				data-bs-toggle="modal" data-bs-target="#myModal">🔥</a></td>
+			<td><a class="btn btn-success"
+				th:href="@{/edit_maker/{id}(id=${maker.id})}">✍</a></td>
+			<td><a class="btn btn-success"
+				th:href="@{/apparelmaker/{id} (id=${maker.id})}">Merkin vaatteet</a></td>
+
+		</tr>
+	</table>
+
+	<!-- Modal -->
+	<div class="modal" id="myModal" tabindex="-1">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title">Confirm delete</h5>
+					<button type="button" class="btn-close" data-bs-dismiss="modal"
+						aria-label="Close"></button>
+				</div>
+				<div class="modal-body">
+					<p>Are you sure you want to delete this maker?</p>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary"
+						data-bs-dismiss="modal">No</button>
+					<a href="" type="button" class="btn btn-primary" id="delRef">Yes</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<script>
+		$('.table #deleteButton'.on('click', function(event) {
+			event.preventDefault();
+			var href = $(this).attr('href');
+			$('#myModal #delRef').attr('href', href);
+			$('#myModal').modal();
+		}))
+	</script>
+
+
+<a class="btn btn-success" href="/apparel_list">Palaa takaisin</a>
 </body>
+
+
 </html>
