--- a/OmppuJaRane/src/main/resources/templates/makerlist.html
+++ b/OmppuJaRane/src/main/resources/templates/makerlist.html
@@ -64,13 +64,13 @@
 		</div>
 	</div>
 
-	<script>
-		$('.table #deleteButton'.on('click', function(event) {
-			event.preventDefault();
-			var href = $(this).attr('href');
-			$('#myModal #delRef').attr('href', href);
-			$('#myModal').modal();
-		}))
+	<script>		
+		$('#deleteButton').on('click', function (e) {
+    e.preventDefault();
+    var href =$(this).attr('href');
+    $('#myModal #delRef').attr('href',href);
+    $('#myModal').modal();
+});
 	</script>
 
 
