--- a/OmppuJaRane/src/main/resources/templates/frontpage.html
+++ b/OmppuJaRane/src/main/resources/templates/frontpage.html
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" />
 </head>
-<body>
+<body style="text-align: center">
 	<h1>Tervetuloa Ranen ja Ompun kauppaan 🐶</h1>
 	<p>Täältä löydät laadukkaimmat ja muodikkaimmat koiranvaatteet säähän kuin säähän.</p>
 	<p>Pääset <a href="/apparel_list">tästä</a> tutustumaan valikoimaamme!</p>
