--- a/OmppuJaRane/src/main/resources/templates/addapparel.html
+++ b/OmppuJaRane/src/main/resources/templates/addapparel.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" />
 </head>
-<body>
+<body style="text-align: center">
 	<h1>Lisää vaate</h1>
 	<div>
 		<form th:object="${apparel}" th:action="@{save_apparel}" action="#" method="post">
