--- a/OmppuJaRane/src/main/resources/templates/apparelmaker.html
+++ b/OmppuJaRane/src/main/resources/templates/apparelmaker.html
@@ -5,9 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" />    
 </head>
-<body>
+<body style="margin: 20px">
 
-	<table class="table table-striped">
+	<table class="table table-striped table-dark table-bordered table-hover table-sm">
 		<tr>
 		    <th>ID</th>
 		    <th>Nimi</th>
@@ -26,6 +26,6 @@
 
     	</th:block>
      </table>
-     <a class="btn btn-success" href="/maker_list">Palaa takaisin</a>
+     <a class="btn btn-info" href="/maker_list">Palaa takaisin</a>
 </body>
 </html>
