spring security finalizations

--- a/OmppuJaRane/src/main/resources/templates/makerlist.html
+++ b/OmppuJaRane/src/main/resources/templates/makerlist.html
@@ -17,6 +17,11 @@
 
 </head>
 <body style="margin: 20px">
+<div class="col-md-4">
+	<form th:action="@{/logout}" method="post">
+		<input type="submit" value="Sign Out" class="btn btn-sm btn-danger"/>
+	</form>
+	</div>
 
 	<table class="table table-striped table-dark table-bordered table-hover table-sm">
 		<tr>
@@ -24,14 +29,14 @@
 			<th>Nimi</th>
 			<th sec:authorize="hasAuthority('ADMIN')">Poista</th>
 			<th sec:authorize="hasAuthority('ADMIN')">Muokkaa</th>
-			<th>Merkin vaatteet</th>
+			<th sec:authorize="hasAuthority('ADMIN')">Merkin vaatteet</th>
 
 
 		</tr>
 		<tr th:each="maker : ${makers}">
 			<td th:text="${maker.id}"></td>
 			<td th:text="${maker.name}"></td>
-			<td><a class="btn btn-outline-danger" id="deleteButton"
+			<td sec:authorize="hasAuthority('ADMIN')"><a class="btn btn-outline-danger" id="deleteButton"
 				th:href="@{/delete_maker/{id}(id=${maker.id})}"
 				data-bs-toggle="modal" data-bs-target="#myModal">🔥</a></td>
 			<td sec:authorize="hasAuthority('ADMIN')"><a class="btn btn-outline-success"
