--- a/OmppuJaRane/src/main/resources/templates/apparelmaker.html
+++ b/OmppuJaRane/src/main/resources/templates/apparelmaker.html
@@ -6,6 +6,11 @@
     <link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" />    
 </head>
 <body style="margin: 20px">
+<div class="col-md-4">
+	<form th:action="@{/logout}" method="post">
+		<input type="submit" value="Sign Out" class="btn btn-sm btn-danger"/>
+	</form>
+	</div>
 
 	<table class="table table-striped table-dark table-bordered table-hover table-sm">
 		<tr>
